no-wrap on next stop list items;

--- a/onebusaway-nyc-webapp/src/main/webapp/css/map/popup.css
+++ b/onebusaway-nyc-webapp/src/main/webapp/css/map/popup.css
@@ -105,6 +105,7 @@
 }
 
 .popup ul li.nextStop {
+	whitespace: no-wrap;
 	color: #000099;
 	height: 16px;
 	font-weight: bold;
